[project]
name = "figma-download-mcp"
version = "0.1.0"
description = "MCP server for generating Figma image download URLs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=3.1.1",
    "requests>=2.32.5",
]
authors = [
    { name = "Oles Nykytiuk", email = "olesnk21@gmail.com" }
]
license = "MIT"
keywords = ["mcp", "figma", "fastmcp"]

[project.scripts]
figma-mcp = "main:main"
